--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "author": "Eric EChemane",
   "license": "MIT",
   "scripts": {
-    "be": "cd backend && yarn start",
+    "be:dev": "cd backend && yarn start:dev",
     "fe:dev": "cd frontend && yarn dev",
-    "fe:prod": "cd frontend && yarn build && yarn start",
-    "dev": "concurrently --kill-others-on-fail \"yarn be\" \"yarn fe:dev\"",
-    "prod": "concurrently --kill-others-on-fail \"yarn be\" \"yarn fe:prod\""
+    "dev": "concurrently --kill-others-on-fail \"yarn be:dev\" \"yarn fe:dev\""
   },
   "dependencies": {
     "concurrently": "^8.2.2"
